--- a/app/styles/commons.scss
+++ b/app/styles/commons.scss
@@ -83,3 +83,21 @@ button.close {
     }
 
 }
+
+.modal-content > .modal-header > button.close {
+    > i.icon-cross-10-grayDark{
+        @extend .icon-cross-10-blueDark;
+    }
+
+    > i.icon-cross-14-grayDark{
+        @extend .icon-cross-14-blueDark;
+    }
+
+    > i.icon-cross-16-grayDark{
+        @extend .icon-cross-16-blueDark;
+    }
+
+    > i.icon-cross-18-grayDark{
+        @extend .icon-cross-18-blueDark;
+    }
+}
